--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
     "@ionic-native/core": "4.3.3",
+    "@ionic-native/local-notifications": "^4.5.0",
     "@ionic-native/splash-screen": "4.3.3",
     "@ionic-native/status-bar": "4.3.3",
     "@ionic/storage": "2.1.3",
+    "cordova-android": "~6.3.0",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.1.0",
@@ -34,7 +36,7 @@
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18",
-    "cordova-android": "~6.3.0"
+    "cordova-plugin-local-notification": "~0.9.0-beta.1"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.0",
@@ -47,7 +49,8 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-whitelist": {},
-      "ionic-plugin-keyboard": {}
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-local-notification": {}
     },
     "platforms": [
       "android"
