--- a/package.json
+++ b/package.json
@@ -21,13 +21,18 @@
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
     "@ionic-native/core": "4.3.3",
+    "@ionic-native/device": "^4.5.2",
+    "@ionic-native/http": "^4.5.2",
     "@ionic-native/local-notifications": "^4.5.0",
     "@ionic-native/splash-screen": "4.3.3",
     "@ionic-native/status-bar": "4.3.3",
     "@ionic/storage": "2.1.3",
     "cordova-android": "~6.3.0",
+    "cordova-plugin-advanced-http": "^1.9.1",
     "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-local-notification": "~0.9.0-beta.1",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
@@ -35,8 +40,7 @@
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-plugin-local-notification": "~0.9.0-beta.1"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.0",
@@ -50,7 +54,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-whitelist": {},
       "ionic-plugin-keyboard": {},
-      "cordova-plugin-local-notification": {}
+      "cordova-plugin-local-notification": {},
+      "cordova-plugin-advanced-http": {}
     },
     "platforms": [
       "android"
